# libvmod-sleep

./: Makefile.am  README.rst  configure.ac  vmod-sleep.spec
debian/: changelog  control  dirs
src/: Makefile.am  vmod_sleep.c  vmod_sleep.vcc
src/tests/: test01.vtc
